# solana-cli

./: Anchor.toml  README.md  package.json
accounts/: new_account.json  vanity_account.json
cicd/: scripts.sh
programs/s1_signer_check/: Cargo.toml
programs/s1_signer_check/src/: lib.rs
programs/s2_data_owner_check/: Cargo.toml
programs/s2_data_owner_check/src/: lib.rs
programs/s3_initialization/: Cargo.toml
programs/s3_initialization/src/: lib.rs
scripts/: connectSolNetwork.ts  convertSecretKey.ts  createKeypair.ts  createVanityAddress.ts  getKeypairFromFile.ts  getRentExemption.ts  getSolBalance.ts  loadAccount.ts  operateCalculator.ts  pingHelloSolana.ts  pingMathSum.ts  restoreBase58SecretKey.ts  restoreMnemonicPhrase.ts  signMessage.ts  transferSol.ts  validatePDA.ts  verifyKeypair.ts
scripts/accounts/: getATATokenBalance.ts  getAirdropSol.ts  getCalculatorData.ts  getMultipleAccountInfo.ts  getPDAPublicKey.ts  getTransaction.ts  getTransactions.ts
scripts/connections/: getGeneralInfo.ts
scripts/keypairs/: createVanityAddress.ts  getKeypairFromFile.ts  restoreBase58SecretKey.ts  restoreMnemonicPhrase.ts  verifyKeypair.ts
scripts/transactions/: estimateFeeForCalculator.ts  getRentExemption.ts  multipleInstructions.ts  pingMathSum.ts
scripts/utils/: accounts.ts  connections.ts  constants.ts  general.ts  index.ts  instructions.ts  keypairs.ts  programs.ts  schema.ts  transactions.ts
